<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#fff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_image_height"
                android:src="@drawable/pic"
                android:id="@+id/newsImage"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newsImageDescription"
                android:alpha="0.8"
                android:text="@string/news_image_description"
                android:background="@color/backgroundLightColor"
                android:padding="8dp"
                android:gravity="center"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newsTitle"
                android:textColor="@color/primaryTextColor"
                android:text="@string/news_title"
                android:textSize="@dimen/xlarge_text"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:gravity="right|center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newsPublisher"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/news_publisher"
                    android:textSize="@dimen/normal_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/secondaryTextColor"
                    android:text="@string/news_divider"
                    android:textSize="@dimen/small_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newsTime"
                    android:textColor="@color/secondaryTextColor"
                    android:text="@string/news_time"
                    android:textSize="@dimen/small_text"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newsSubTitle"
                android:lineSpacingExtra="4dp"
                android:textSize="@dimen/large_text"
                android:textColor="@color/primaryTextColor"
                android:text="@string/news_sub_title"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newsText"
                android:lineSpacingExtra="4dp"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/large_text"
                android:text="@string/news_text"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>